# LLMode

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  RELEASE_v0.1.0.md  REQUIREMENTS.md
llmode/: __init__.py  schemas.py
llmode/backends/: __init__.py  base.py  llamacpp.py  mlx.py  ollama.py  registry.py  vllm.py
llmode/catalog/: __init__.py  huggingface.py
llmode/cli/: __init__.py  app.py
llmode/config/: __init__.py  paths.py  settings.py
llmode/daemon/: __init__.py  app.py  context.py  deps.py
llmode/daemon/routers/: __init__.py  events.py  management.py  openai.py
llmode/hardware/: __init__.py  probe.py
llmode/lifecycle/: __init__.py  supervisor.py
llmode/metrics/: __init__.py  collector.py
llmode/store/: __init__.py  db.py
ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
ui/src/api/: client.ts  types.ts
ui/src/components/: Sparkline.tsx  StatCard.tsx
ui/src/hooks/: useMetrics.ts
ui/src/pages/: Catalog.tsx  Dashboard.tsx  Models.tsx
ui/src/util/: format.ts
